welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value A
A==a+b
^blueTicket:3: error: not found: value B
B==b+c
^blueTicket:4: error: not found: value C
C==a+c
^blueTicket:5: error: not found: value A
	if (A==10 || B==10 || C==10 ) return 10
            ^blueTicket:6: error: not found: value A
	if (A==B+10 || A==C+10) return 5
            ^