welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
A==a+b
B==b+c
C==a+c
	if (A==10 || B==10 || C==10 ) return 10
	if (A==B+10 || A==C+10) return 5
	else return 0
}